# voxel-game

./: Cargo.toml
res/: block.blend  cube.mtl
src/: block.rs  camera.rs  lib.rs  main.rs  model.rs  player.rs  resources.rs  shader.wgsl  texture.rs  world.rs
