[package]
name = "tutorial12-camera"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
tokio = { version = "1.27.0", features = ["full"] }
bytemuck = { version = "1.13.1", features = ["derive"] }
image = { version = "0.24.6", default-features = false, features = ["png"] }
anyhow = "1.0.70"
cgmath = "0.18.0"
tobj = { version = "3.2.4", features = ["async"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"